@@ -1,14 +1,14 @@
 plugins {
     id 'java-library'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
     id "org.sonarqube" version "2.8"
     id 'jacoco'
 }
 
 version '8.0'
 
-sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14
+/*sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14*/
 
 repositories {
     mavenCentral()
@@ -29,10 +29,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:1.7.30'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-    testCompile 'com.github.Anuken.Mindustry:server:-SNAPSHOT'
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testImplementation 'com.github.Anuken.Mindustry:server:-SNAPSHOT'
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
-    testCompile group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+    testImplementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
 
 }
 
@@ -56,6 +56,7 @@ sourceSets{
 
 compileJava {
     options.encoding = "UTF-8"
+    options.compilerArgs += ["--enable-preview"]
 }
 
 configurations.all {
@@ -64,6 +65,7 @@ configurations.all {
 
 test {
     testLogging.showStandardStreams = true
+    jvmArgs '--enable-preview'
 }
 
 sonarqube {
